--- a/SpeechRecognitionDigitalTextbook/SettingPage.xaml
+++ b/SpeechRecognitionDigitalTextbook/SettingPage.xaml
@@ -24,13 +24,13 @@
         <Button FontFamily="DFYanKaiW5-B5" FontSize="46" Canvas.Left="2" Canvas.Top="642" Content="新增" x:Name="CreateButton" Height="80" Click="CreateButton_Click" />
         <Image Canvas.Left="104" Canvas.Top="642" Height="80" x:Name="DeleteImage" Stretch="Fill" Width="97" Source="/SpeechRecognitionDigitalTextbook;component/Images/trash.png" MouseUp="DeleteImage_MouseUp" />
         <Canvas x:Name="GetBackgroundCanvas" Height="200" Canvas.Left="244" Canvas.Top="165" Width="1000" Background="White" AllowDrop="True" Drop="GetBackgroundCanvas_Drop">
-            <TextBlock x:Name="test" TextWrapping="Wrap" Text="背景圖" FontSize="24"/>
+            <TextBlock TextWrapping="Wrap" Text="背景圖" FontSize="24"/>
             <Image x:Name="ChooseBackgroundImage" Height="200" Canvas.Left="220" />
             <Button Content="選取背景圖片" Canvas.Left="90" Canvas.Top="80" Click="ChooseBackgroundPicture_Click" FontSize="18"/>
         </Canvas>
         <Canvas Width="1000" Background="White" Height="237" Canvas.Left="244" Canvas.Top="400" />
         <TextBlock Canvas.Left="244" TextWrapping="Wrap" Text="課程名稱" Canvas.Top="649" FontSize="48" />
-        <TextBox Name="ClassNameTextbox"  Canvas.Left="436" TextWrapping="NoWrap"  Text="" Canvas.Top="646" FontSize="48" Width="507" />
-        <Button Name="SaveClassDataButton" Content="儲存" Canvas.Left="964" Canvas.Top="645" FontSize="48" Click="SaveClassDataButton_Click"/>
+        <TextBox Name="ClassNameTextbox"  Canvas.Left="436" TextWrapping="NoWrap"  Text="" Canvas.Top="646" FontSize="48" Width="507" IsEnabled="False" />
+        <Button Name="SaveClassDataButton" Content="儲存" Canvas.Left="950" Canvas.Top="646" FontSize="48" Click="SaveClassDataButton_Click"/>
     </Canvas>
 </Page>
