--- a/SpeechRecognitionDigitalTextbook/SettingPage.xaml
+++ b/SpeechRecognitionDigitalTextbook/SettingPage.xaml
@@ -13,15 +13,25 @@
 			<TextBlock x:Name="textBlock" Margin="0" TextWrapping="Wrap" FontSize="37.333" Text="{Binding ClassName}" HorizontalAlignment="Center" VerticalAlignment="Center" LineHeight="8" TextAlignment="Center" AllowDrop="False"/>
 		</DataTemplate>
         <DataTemplate x:Key="ObjectListDataTemplate">
-        	<WrapPanel Margin="0" Height="Auto" Width="Auto"  VerticalAlignment="Stretch" ItemHeight="100">
-        		<Image Width="Auto" Margin="0,0,20,0"/>
-        		<Button Content="選擇圖片" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,20,0" FontSize="48" Click="Button_Click"/>
-        		<TextBox TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,0,20,0" FontSize="48" Width="390"/>
-        		<Image Height="Auto" Width="Auto" OpacityMask="{x:Null}" Source="Images/trash.png" MouseUp="Image_MouseUp"/>
+        	<WrapPanel Margin="0" Height="Auto" Width="Auto"  VerticalAlignment="Stretch" ItemHeight="70">
+        		<Image Width="Auto" Margin="10,0,20,0" Source="Images/SRPicture.png"/>
+        		<Image Height="Auto" Width="Auto" Margin="0,10,20,10" HorizontalAlignment="Center" VerticalAlignment="Center" Source="Images/ChoosePictureButton.jpg" MouseUp="ObjectChooseImage_MouseUp"/>
+        		<TextBox TextWrapping="NoWrap"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,0,20,0" FontSize="40" Width="450"/>
+        		<Image Height="Auto" Width="Auto" OpacityMask="{x:Null}" Source="Images/trash.png" MouseUp="ObjectDeleteImage_MouseUp"/>
         	</WrapPanel>
         </DataTemplate>
+        <Storyboard x:Key="ListDeleteImageStoryBoard" RepeatBehavior="Forever">
+        	<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="DeleteImage">
+        		<SplineDoubleKeyFrame KeyTime="0" Value="1"/>
+        		<SplineDoubleKeyFrame KeyTime="0:0:0.5" Value="0.5"/>
+        		<SplineDoubleKeyFrame KeyTime="0:0:1" Value="1"/>
+        	</DoubleAnimationUsingKeyFrames>
+        </Storyboard>
 		
 	</Page.Resources>
+	<Page.Triggers>
+		<EventTrigger RoutedEvent="FrameworkElement.Loaded"/>
+	</Page.Triggers>
     
     <Canvas>
         <TextBlock Canvas.Left="503" Canvas.Top="15" x:Name="GameSettingText" Text="遊戲設定"  VerticalAlignment="Center" FontSize="64" FontFamily="DFYanKaiW5-B5" />
@@ -30,7 +40,16 @@
         <TextBlock Canvas.Top="100" x:Name="ListText" FontSize="64" FontFamily="DFYanKaiW5-B5" Canvas.Left="0" ><Run Language="zh-tw" Text="清單"/></TextBlock>
         <ListBox x:Name="ClassList" Height="472" Style="{DynamicResource SimpleListBox}" Canvas.Top="165" Width="200" Canvas.Left="1" ItemTemplate="{StaticResource ClassListDataTemplate}" SelectionChanged="ClassList_SelectionChanged" />
         <Button FontFamily="DFYanKaiW5-B5" FontSize="46" Canvas.Left="2" Canvas.Top="642" Content="新增" x:Name="CreateButton" Height="80" Click="CreateButton_Click" />
-        <Image Canvas.Left="104" Canvas.Top="642" Height="80" x:Name="DeleteImage" Stretch="Fill" Width="97" Source="/SpeechRecognitionDigitalTextbook;component/Images/trash.png" MouseUp="DeleteImage_MouseUp" />
+        <Image Canvas.Left="104" Canvas.Top="642" Height="80" x:Name="DeleteImage" Stretch="Fill" Width="97" Source="/SpeechRecognitionDigitalTextbook;component/Images/trash.png" MouseUp="DeleteImage_MouseUp" >
+        	<i:Interaction.Triggers>
+        		<i:EventTrigger EventName="MouseEnter">
+        			<ei:ControlStoryboardAction Storyboard="{StaticResource ListDeleteImageStoryBoard}"/>
+        		</i:EventTrigger>
+        		<i:EventTrigger EventName="MouseLeave">
+        			<ei:ControlStoryboardAction ControlStoryboardOption="Stop" Storyboard="{StaticResource ListDeleteImageStoryBoard}"/>
+        		</i:EventTrigger>
+        	</i:Interaction.Triggers>
+        </Image>
         <Canvas x:Name="GetBackgroundCanvas" Height="200" Canvas.Left="244" Canvas.Top="165" Width="1000" Background="White" AllowDrop="True" Drop="GetBackgroundCanvas_Drop">
             <TextBlock Name="test" TextWrapping="Wrap" Text="背景圖" FontSize="24"/>
             <Image x:Name="ChooseBackgroundImage" Height="200" Canvas.Left="220" />
@@ -40,6 +59,7 @@
         <TextBox Name="ClassNameTextbox"  Canvas.Left="436" TextWrapping="NoWrap"  Text="" Canvas.Top="646" FontSize="48" Width="507" IsEnabled="False" />
         <Button Name="SaveClassDataButton" Content="儲存" Canvas.Left="950" Canvas.Top="646" FontSize="48" Click="SaveClassDataButton_Click"/>
         <ListBox x:Name="ObjectList" Height="254" Canvas.Left="244" Style="{DynamicResource SimpleListBox}" Canvas.Top="383" Width="1000" ItemTemplate="{DynamicResource ObjectListDataTemplate}" SelectionChanged="ObjectList_SelectionChanged"/>
+        
     </Canvas>
 
     
